{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 117,
  "lineage": "f4c95402-11d5-7124-24f8-b7c7f472f17c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d1e544b84bf7502",
            "arn": "arn:aws:ec2:us-east-2:642071678120:instance/i-08ee352e5fb9b6521",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ee352e5fb9b6521",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d7a99ebf2bce83f8",
            "private_dns": "ip-172-16-191-241.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.191.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08e923918998fd741",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ab57eeeb2d229db1",
            "tags": {
              "Name": "backend-prod",
              "env": "prod"
            },
            "tags_all": {
              "Name": "backend-prod",
              "env": "prod"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0acd2309a80345d10"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.backend",
            "aws_security_group.bastion",
            "aws_security_group.frontend",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d1e544b84bf7502",
            "arn": "arn:aws:ec2:us-east-2:642071678120:instance/i-0a224deb3093a93c5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a224deb3093a93c5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0366c67806a5703a4",
            "private_dns": "ip-172-17-43-72.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.17.43.72",
            "public_dns": "ec2-18-117-77-121.us-east-2.compute.amazonaws.com",
            "public_ip": "18.117.77.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-041e00860d21c1447",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0353f2c464388292d",
            "tags": {
              "Name": "bastion-prod",
              "env": "prod"
            },
            "tags_all": {
              "Name": "bastion-prod",
              "env": "prod"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05837b78a0219fbc1"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.bastion",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d1e544b84bf7502",
            "arn": "arn:aws:ec2:us-east-2:642071678120:instance/i-0a4c15099652300f3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4c15099652300f3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b13706f0b4b670cd",
            "private_dns": "ip-172-17-110-154.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.17.110.154",
            "public_dns": "ec2-18-222-126-246.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.126.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a27f46e18cbf499c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c4a254348a4f5f7",
            "tags": {
              "Name": "frontend-prod",
              "env": "prod"
            },
            "tags_all": {
              "Name": "frontend-prod",
              "env": "prod"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0711f7cd9ea88461e"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.frontend",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "uberpriv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.16.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03cee36216954e6333246677288",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03cee36216954e633",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0ed3aaa2e8f87b560"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.peer",
            "module.vpc.aws_route_table.private2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "uberpub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.16.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-001d10f6d217e84253246677288",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-001d10f6d217e8425",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0ed3aaa2e8f87b560"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.peer",
            "module.vpc.aws_route_table.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "zomatopriv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.17.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0282236712ca56dec221142454",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0282236712ca56dec",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0ed3aaa2e8f87b560"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.peer",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "zomatopub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.17.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-073f1bfa20c49b793221142454",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-073f1bfa20c49b793",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0ed3aaa2e8f87b560"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.peer",
            "module.vpc.aws_route_table.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:642071678120:security-group/sg-0acd2309a80345d10",
            "description": "Allow mysql inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0acd2309a80345d10",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.17.0.0/18"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.17.64.0/18"
                ],
                "description": "MYSQL Access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "backend-prod-20220730135335514300000003",
            "name_prefix": "backend-prod-",
            "owner_id": "642071678120",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend-prod-sg",
              "env": "prod"
            },
            "tags_all": {
              "Name": "backend-prod-sg",
              "env": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da1d4ca258189984"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.frontend",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:642071678120:security-group/sg-05837b78a0219fbc1",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05837b78a0219fbc1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-prod-20220730135326744100000001",
            "name_prefix": "bastion-prod-",
            "owner_id": "642071678120",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-prod-sg"
            },
            "tags_all": {
              "Name": "bastion-prod-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3b128ff1e190eda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:642071678120:security-group/sg-0711f7cd9ea88461e",
            "description": "Allow SSH, HTTP and HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0711f7cd9ea88461e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from outside",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05837b78a0219fbc1"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "frontend-prod-20220730135331216300000002",
            "name_prefix": "frontend-prod-",
            "owner_id": "642071678120",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontend-prod-sg",
              "env": "prod"
            },
            "tags_all": {
              "Name": "frontend-prod-sg",
              "env": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3b128ff1e190eda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0ed3aaa2e8f87b560",
            "peer_owner_id": "642071678120",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-0f3b128ff1e190eda",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "VPC Peering between zomato and uber"
            },
            "tags_all": {
              "Name": "VPC Peering between zomato and uber"
            },
            "vpc_id": "vpc-0da1d4ca258189984"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06b5a326a739d61f4",
            "association_id": "eipassoc-0e670595558d8305e",
            "domain": "vpc",
            "id": "eipalloc-06b5a326a739d61f4",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0abd7b47030fa4880",
            "private_dns": "ip-172-16-26-186.us-east-2.compute.internal",
            "private_ip": "172.16.26.186",
            "public_dns": "ec2-3-20-134-172.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.134.172",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "zomato-prod-ngw-eip",
              "env": "prod",
              "project": "zomato"
            },
            "tags_all": {
              "Name": "zomato-prod-ngw-eip",
              "env": "prod",
              "project": "zomato"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:642071678120:internet-gateway/igw-0c68e234ff6624e4e",
            "id": "igw-0c68e234ff6624e4e",
            "owner_id": "642071678120",
            "tags": {
              "Name": "zomato-prod-igw",
              "env": "prod",
              "project": "zomato"
            },
            "tags_all": {
              "Name": "zomato-prod-igw",
              "env": "prod",
              "project": "zomato"
            },
            "vpc_id": "vpc-0da1d4ca258189984"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06b5a326a739d61f4",
            "connectivity_type": "public",
            "id": "nat-08ef829e449bfd69c",
            "network_interface_id": "eni-0abd7b47030fa4880",
            "private_ip": "172.16.26.186",
            "public_ip": "3.20.134.172",
            "subnet_id": "subnet-0f5e33c3216bdc8db",
            "tags": {
              "Name": "zomato-prod-ngw",
              "env": "prod",
              "project": "zomato"
            },
            "tags_all": {
              "Name": "zomato-prod-ngw",
              "env": "prod",
              "project": "zomato"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:642071678120:route-table/rtb-0282236712ca56dec",
            "id": "rtb-0282236712ca56dec",
            "owner_id": "642071678120",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08ef829e449bfd69c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "zomato-prod-private",
              "env": "prod",
              "project": "zomato"
            },
            "tags_all": {
              "Name": "zomato-prod-private",
              "env": "prod",
              "project": "zomato"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da1d4ca258189984"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:642071678120:route-table/rtb-073f1bfa20c49b793",
            "id": "rtb-073f1bfa20c49b793",
            "owner_id": "642071678120",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c68e234ff6624e4e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "zomato-prod-public",
              "env": "prod",
              "project": "zomato"
            },
            "tags_all": {
              "Name": "zomato-prod-public",
              "env": "prod",
              "project": "zomato"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da1d4ca258189984"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcdc21ace26c4189",
            "route_table_id": "rtb-0282236712ca56dec",
            "subnet_id": "subnet-0ab57eeeb2d229db1"
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private1",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2db4dfc3945947a",
            "route_table_id": "rtb-073f1bfa20c49b793",
            "subnet_id": "subnet-0f5e33c3216bdc8db"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ff9816b814fb154",
            "route_table_id": "rtb-073f1bfa20c49b793",
            "subnet_id": "subnet-03885dd72b57dbdb6"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:642071678120:subnet/subnet-0ab57eeeb2d229db1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.16.128.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab57eeeb2d229db1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "642071678120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zomato-private-1",
              "env": "prod",
              "project": "zomato"
            },
            "tags_all": {
              "Name": "zomato-private-1",
              "env": "prod",
              "project": "zomato"
            },
            "vpc_id": "vpc-0da1d4ca258189984"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:642071678120:subnet/subnet-0f5e33c3216bdc8db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.0.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5e33c3216bdc8db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "642071678120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zomato-public-1",
              "env": "prod",
              "project": "zomato"
            },
            "tags_all": {
              "Name": "zomato-public-1",
              "env": "prod",
              "project": "zomato"
            },
            "vpc_id": "vpc-0da1d4ca258189984"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:642071678120:subnet/subnet-03885dd72b57dbdb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.64.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03885dd72b57dbdb6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "642071678120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zomato-public-2",
              "env": "prod",
              "project": "zomato"
            },
            "tags_all": {
              "Name": "zomato-public-2",
              "env": "prod",
              "project": "zomato"
            },
            "vpc_id": "vpc-0da1d4ca258189984"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:642071678120:vpc/vpc-0da1d4ca258189984",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-05a0ad3d1c43078e0",
            "default_route_table_id": "rtb-0c0b259f0a0d3c299",
            "default_security_group_id": "sg-0aa2e6e89dd636a87",
            "dhcp_options_id": "dopt-07284ba2daf17bebb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0da1d4ca258189984",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c0b259f0a0d3c299",
            "owner_id": "642071678120",
            "tags": {
              "Name": "zomato",
              "env": "prod",
              "project": "zomato"
            },
            "tags_all": {
              "Name": "zomato",
              "env": "prod",
              "project": "zomato"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[1]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e330734512db6553",
            "domain": "vpc",
            "id": "eipalloc-0e330734512db6553",
            "network_border_group": "us-east-2",
            "private_dns": "ip-172-17-43-164.us-east-2.compute.internal",
            "public_dns": "ec2-3-132-119-200.us-east-2.compute.amazonaws.com",
            "public_ip": "3.132.119.200",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "uber-prod-ngw-eip",
              "env": "prod",
              "project": "uber"
            },
            "tags_all": {
              "Name": "uber-prod-ngw-eip",
              "env": "prod",
              "project": "uber"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc[1]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:642071678120:internet-gateway/igw-0587509d2a67b6224",
            "id": "igw-0587509d2a67b6224",
            "owner_id": "642071678120",
            "tags": {
              "Name": "uber-prod-igw",
              "env": "prod",
              "project": "uber"
            },
            "tags_all": {
              "Name": "uber-prod-igw",
              "env": "prod",
              "project": "uber"
            },
            "vpc_id": "vpc-0f3b128ff1e190eda"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[1]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:642071678120:route-table/rtb-03cee36216954e633",
            "id": "rtb-03cee36216954e633",
            "owner_id": "642071678120",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0ed3aaa2e8f87b560"
              }
            ],
            "tags": {
              "Name": "uber-prod-private",
              "env": "prod",
              "project": "uber"
            },
            "tags_all": {
              "Name": "uber-prod-private",
              "env": "prod",
              "project": "uber"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3b128ff1e190eda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[1]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:642071678120:route-table/rtb-001d10f6d217e8425",
            "id": "rtb-001d10f6d217e8425",
            "owner_id": "642071678120",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0587509d2a67b6224",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "uber-prod-public",
              "env": "prod",
              "project": "uber"
            },
            "tags_all": {
              "Name": "uber-prod-public",
              "env": "prod",
              "project": "uber"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3b128ff1e190eda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04341adb8ff31ac49",
            "route_table_id": "rtb-03cee36216954e633",
            "subnet_id": "subnet-09681c71283cc07d7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private2",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a63785b1c625cb77",
            "route_table_id": "rtb-001d10f6d217e8425",
            "subnet_id": "subnet-0353f2c464388292d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073398f7b123598f9",
            "route_table_id": "rtb-001d10f6d217e8425",
            "subnet_id": "subnet-00c4a254348a4f5f7"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:642071678120:subnet/subnet-09681c71283cc07d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.17.128.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09681c71283cc07d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "642071678120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uber-private-1",
              "env": "prod",
              "project": "uber"
            },
            "tags_all": {
              "Name": "uber-private-1",
              "env": "prod",
              "project": "uber"
            },
            "vpc_id": "vpc-0f3b128ff1e190eda"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:642071678120:subnet/subnet-0353f2c464388292d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.17.0.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0353f2c464388292d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "642071678120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uber-public-1",
              "env": "prod",
              "project": "uber"
            },
            "tags_all": {
              "Name": "uber-public-1",
              "env": "prod",
              "project": "uber"
            },
            "vpc_id": "vpc-0f3b128ff1e190eda"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:642071678120:subnet/subnet-00c4a254348a4f5f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.17.64.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c4a254348a4f5f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "642071678120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uber-public-2",
              "env": "prod",
              "project": "uber"
            },
            "tags_all": {
              "Name": "uber-public-2",
              "env": "prod",
              "project": "uber"
            },
            "vpc_id": "vpc-0f3b128ff1e190eda"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[1]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:642071678120:vpc/vpc-0f3b128ff1e190eda",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0d92a1c8cb83091c8",
            "default_route_table_id": "rtb-078402918e1a5f9e2",
            "default_security_group_id": "sg-0aed0eca066f9ad5b",
            "dhcp_options_id": "dopt-07284ba2daf17bebb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f3b128ff1e190eda",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-078402918e1a5f9e2",
            "owner_id": "642071678120",
            "tags": {
              "Name": "uber",
              "env": "prod",
              "project": "uber"
            },
            "tags_all": {
              "Name": "uber",
              "env": "prod",
              "project": "uber"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}